syntax = "proto3";

package protocol.audiusddex.v1;

option go_package = "./core_proto/audiusddex/v1;audiusddex_v1";

message NewReleaseMessage {
  ReleaseHeader release_header = 1;
  repeated Resource resource_list = 2;
  repeated Release release_list = 3;
}

message ReleaseHeader {
  string message_id = 1;
  Party sender = 2;
  Party sent_on_behalf_of = 3;
  Party recipient = 4;
}

message Party {
  string party_id = 1;
  string party_name = 2;
  bytes pub_key = 3;
}

message Resource {
  oneof resource {
    SoundRecording sound_recording = 1;
    Image image = 2;
  }
}

message SoundRecording {
  SoundRecordingId id = 1;
  string filename = 2;
  string md5_hash = 3;
  string cid = 5;
  repeated ResourceContributor contributors = 6;
  repeated ResourceContributor indirect_contributors = 7;
  repeated TranscodedAudioReference transcodings = 8;
}

message SoundRecordingId {
  string isrc = 2;
}

message TranscodedAudioReference {
  string cid = 1;
  string kbps = 2;
}

message ResourceContributor {
  string party_name = 1;
  string role = 2;
}

message Image {
  ImageId id = 1;
  string cid = 2;
}

message ImageId {
  string proprietary_id = 1;
  string namespace = 2;
}

message Release {
  oneof release {
    TrackRelease track_release = 1;
    AlbumRelease album_release = 2;
  }
}

message TrackRelease {
  ReleaseId release_id = 1;
  string title = 2;
  string genre = 3;
  string artist = 4;
}

message AlbumRelease {
  ReleaseId release_id = 1;
  string title = 2;
  string genre = 3;
  string artist = 4;
}

message ReleaseId {
  string isrc = 1;
  string icpn = 2;
  string grid = 3;
  string catalogue_number = 4;
  string namespace = 5;
}
