syntax = "proto3";

package eth.v1;

import "eth/v1/types.proto";

option go_package = "github.com/AudiusProject/audiusd/pkg/api/eth/v1";

service EthService {
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
  rpc GetRegisteredEndpoints(GetRegisteredEndpointsRequest) returns (GetRegisteredEndpointsResponse) {}
  rpc GetRegisteredEndpointInfo(GetRegisteredEndpointInfoRequest) returns (GetRegisteredEndpointInfoResponse) {}
  rpc GetServiceProviders(GetServiceProvidersRequest) returns (GetServiceProvidersResponse) {}
  rpc GetLatestFundingRound(GetLatestFundingRoundRequest) returns (GetLatestFundingRoundResponse) {}
  rpc IsDuplicateDelegateWallet(IsDuplicateDelegateWalletRequest) returns (IsDuplicateDelegateWalletResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Subscribe(SubscriptionRequest) returns (stream SubscriptionResponse) {}
}
